--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,20 @@
 body
 {
     padding: 15px;
+
     text-align: center;
     font-family: Garamond;
+
     background-color: rgb(20, 23, 30);
     color: rgb(200, 230, 250);
+}
+
+nav
+{
+    display:flex;
+    background-color: rgb(50, 80, 100);
+    justify-content: space-between;
+    padding: 10px;
 }
 
 #projects
@@ -16,7 +26,41 @@ body
 
 div > article
 {
+    border-style: dashed;
+    border-color: rgb(50, 80, 100);
+
     margin: 10px;
     padding: 20px;
+
     background-color: rgb(10, 13, 20);
+}
+
+@media only screen and (max-width: 800px) and (min-width: 501px)
+{
+    div > article
+    {
+        
+        border-color: rgb(100, 130, 150);
+        border-style: solid;
+        border-width: 2px;
+
+        background-color: rgb(40, 43, 50);
+    }
+}
+
+@media only screen and (max-width: 500px)
+{
+    div > article
+    {
+        border-color: rgb(200, 230, 250);
+        border-style: solid;
+        border-width: 2px;
+
+        background-color: rgb(60, 63, 70);
+    }
+
+    nav
+    {
+        flex-direction: column
+    }
 }
